--- a/composer.json
+++ b/composer.json
@@ -47,8 +47,11 @@
     "bower-asset/html5shiv": "^3.0",
     "bower-asset/jquery-slimscroll": "^1.3",
     "bower-asset/flot": "^0.8",
+    "bower-asset/materialize": "*",
     "symfony/process": "^3.0",
-    "metalguardian/yii2-form-builder": "^1.0"
+    "metalguardian/yii2-form-builder": "^1.0",
+    "raveren/kint": "^1.0",
+    "tuyakhov/yii2-materialize": "*"
   },
   "require-dev": {
     "yiisoft/yii2-debug": "^2.0.0",
